# SAUNACFD

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
.tmp_review/: case.yaml
.tmp_review2/: case.yaml
.tmp_review3/: case.yaml
configs/cases/: aufguss_test.yaml  dry_sauna_M1.yaml  dry_sauna_steady.yaml  dry_sauna_steady_viewfactor.yaml  dry_sauna_steady_viewfactor_fixedT.yaml  dry_sauna_steady_viewfactor_split.yaml  dry_sauna_steady_viewfactor_split_473K.yaml  dry_sauna_steady_viewfactor_split_673K.yaml  dry_sauna_steady_viewfactor_split_vent.yaml  full_feature_test.yaml  loyly_test.yaml  parametric_J1_6kW_vent_std.yaml  parametric_J2_8kW_vent_std.yaml  parametric_J3_6kW_vent_half.yaml  parametric_J4_8kW_vent_half.yaml  parametric_K1_13kW_vent_controlled.yaml  parametric_K2_13kW_vent_half.yaml  parametric_K3_8kW_vent_half.yaml
configs/schemas/: case_schema.json
docs/: calculation_validity_review.md  computational_insights_summary.md  daq_hardware_setup.md  governing_equations.md  governing_equations.tex  measurement_implementation_plan.md  measurement_philosophy.md  openfoam_current_issues.md  parametric_study_volume_source_vent.md  parametric_study_wall_heater.md  procurement_plan.md  review_response_2026_04_06.md  technical_reference.md
firmware/: config.py  main.py  serial_out.py
scripts/: build_parametric_J.py  md2pdf.py  plot_openfoam_results.py  run_and_plot.py  run_case_d.sh  run_openfoam_wsl.sh  run_parametric_J.sh  run_parametric_J12.sh  run_parametric_J_all.sh  run_parametric_K.sh  skin_htc_demo.py
ui/: app.py
(+62 files in other folders)
